--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>html5</title>
+    <link rel="stylesheet" href="styles/nav.css">
 </head>
 <style>
     td,th{
@@ -22,6 +23,14 @@
     }
 </style>
 <body>
+    <nav>
+        <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Index</a></li>
+            <li><a href="form.html">Form</a></li>
+            <li><a href="about.html">About</a></li>
+        </ul>
+    </nav>
     <header>
         <h1>let's see some video and audio </h1>
         <audio src="media/audio/fart-01.mp3" controls></audio><br>
