--- a/form.html
+++ b/form.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asif store form</title>
+    <link rel="stylesheet" href="styles/nav.css">
+
     <style>
         input:hover{
             font-size: 15px;
@@ -24,6 +26,21 @@
     </style>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Index</a></li>
+            <li><a href="form.html">Form
+                <ul class="dropdown">
+                    <li><a href="google.com">Grocery</a></li>
+                    <li><a href="google.com">Clothings</a></li>
+                    <li><a href="google.com">Medicine</a></li>
+                </ul>
+            </a></li>
+            <li><a href="about.html">About</a></li>
+                
+        </ul>
+    </nav>
     <h1>Signup Page for Asif Store membership</h1>
     <form action="">
         <p>Name: <input type="text" name="asif" id="name" placeholder="enter your name"></p>
